# aiogram-starter-kit

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
bot/: .env.example  Makefile  pyproject.toml  run.py
bot/aiogram_starter_kit/: __main__.py  configuration.py  dispatcher.py  main.py
bot/aiogram_starter_kit/db/: database.py
bot/aiogram_starter_kit/db/entities/: base.py  user.py
bot/aiogram_starter_kit/db/repositories/: __init__.py  abstract.py  user.py
bot/aiogram_starter_kit/dtos/: database.py
bot/aiogram_starter_kit/enums/: __init__.py
bot/aiogram_starter_kit/filters/: __init__.py  admin.py  register.py
bot/aiogram_starter_kit/handlers/: admin.py  register.py  start.py  unrecognized.py
bot/aiogram_starter_kit/keyboards/: __init__.py  register.py  user.py
bot/aiogram_starter_kit/logic/: __init__.py  admin.py  register.py  start.py
bot/aiogram_starter_kit/middlewares/: database.py
bot/aiogram_starter_kit/structures/dtos/: database.py
bot/aiogram_starter_kit/structures/states/: __init__.py
bot/aiogram_starter_kit/utils/: __init__.py  constants.py  ui_commands.py
bot/db/entities/: __init__.py  user.py
bot/db/repositories/: abstract.py  user.py
bot/migrations/: env.py
bot/migrations/versions/: 6587cb974262_initial.py
docker/: common.yml  docker-compose.yml  live.yml  local.yml
docker/bot/: Dockerfile
docker/images/bot/: Dockerfile
docker/images/bot/files/: entrypoint.sh
docker/redis/: Dockerfile  redis.conf
docs/: index.html
docs/web-app/: index.html
migrations/: env.py
migrations/versions/: 875716812aff_initial.py
src/: config.py
src/bot/: __main__.py  dispatcher.py
src/bot/common/: text.py
src/bot/dtos/: __init__.py  database.py  user.py
src/bot/dtos/user/: __init__.py  user_create_dto.py  user_dto.py  user_update_dto.py
src/bot/enums/: __init__.py  gender.py  role.py
src/bot/filters/: __init__.py  admin.py  register.py
src/bot/handlers/: __init__.py  admin.py  register.py  start.py  unrecognized.py
src/bot/keyboards/: __init__.py  register.py  user.py
src/bot/middlewares/: __init__.py  database.py  role.py
src/bot/services/: __init__.py  user.py
src/bot/states/: __init__.py  register.py
src/bot/structures/: __init__.py  transfer_data.py
src/bot/utils/: __init__.py  ui_commands.py
src/db/: __init__.py  database.py
src/db/entities/: __init__.py  base.py  user.py
src/db/models/: base.py  user.py
src/db/repositories/: __init__.py  abstract.py  user.py
