[tool.poetry]
name = "aiogram-starter-kit"
version = "0.1.0"
description = "A Versatile and Functional aiogram 3.x Bot Template."
authors = [
  "Serhii Ihnatiev <141933729+iamihnatiev@users.noreply.github.com>",
]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.0.0"
sqlalchemy = "^2.0.20"
asyncpg = "^0.28.0"
alembic = "^1.12.0"
greenlet = "^2.0.2"
redis="^5.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
